--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -7,7 +7,7 @@ permissions:
   packages: write
 
 jobs:
-  build-native:
+  build-docker:
     runs-on: ubuntu-latest
     steps:
       - name: Install libs needed for native build
@@ -57,6 +57,7 @@ jobs:
       - name: Docker login
         if: ${{ github.event_name != 'pull_request_target' && github.event_name != 'pull_request' }}
         uses: docker/login-action@v3
+        continue-on-error: true
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
