--- a/variants/picomputer-s3/platformio.ini
+++ b/variants/picomputer-s3/platformio.ini
@@ -31,6 +31,9 @@ build_flags =
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
+  -D MESHTASTIC_EXCLUDE_WEBSERVER=1
+  -D MESHTASTIC_EXCLUDE_SERIAL=1
+  -D MESHTASTIC_EXCLUDE_SOCKETAPI=1
   -D INPUTDRIVER_MATRIX_TYPE=1
   -D USE_PIN_BUZZER=PIN_BUZZER
   -D USE_SX127x
