--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -31,6 +31,8 @@ build_flags =
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
+  -D MESHTASTIC_EXCLUDE_SERIAL=1
+  -D MESHTASTIC_EXCLUDE_SOCKETAPI=1
   -D INPUTDRIVER_I2C_KBD_TYPE=0x55
   -D INPUTDRIVER_ENCODER_TYPE=3
   -D INPUTDRIVER_ENCODER_LEFT=1
