--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -7,14 +7,14 @@ permissions:
   packages: write
 
 jobs:
-  build-docker:
+  build-native:
     runs-on: ubuntu-latest
     steps:
       - name: Install libs needed for native build
         shell: bash
         run: |
           sudo apt-get update --fix-missing
-          sudo apt-get install -y libbluetooth-dev libgpiod-dev libyaml-cpp-dev openssl libssl-dev libulfius-dev liborcania-dev libusb-1.0-0-dev  libi2c-dev
+          sudo apt-get install -y libbluetooth-dev libgpiod-dev libyaml-cpp-dev openssl libssl-dev libulfius-dev liborcania-dev libusb-1.0-0-dev
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -22,18 +22,6 @@ jobs:
           submodules: recursive
           ref: ${{github.event.pull_request.head.ref}}
           repository: ${{github.event.pull_request.head.repo.full_name}}
-
-      - name: Create virtualenv
-        shell: bash
-        run: |
-          python3 -m venv ".venv"
-
-      - name: Activate virtualenv
-        shell: bash
-        run: |
-          . .venv/bin/activate
-          echo PATH=$PATH >> $GITHUB_ENV
-          echo VIRTUAL_ENV=$VIRTUAL_ENV >> $GITHUB_ENV
 
       - name: Upgrade python tools
         shell: bash
@@ -57,29 +45,25 @@ jobs:
       - name: Docker login
         if: ${{ github.event_name != 'pull_request_target' && github.event_name != 'pull_request' }}
         uses: docker/login-action@v3
-        continue-on-error: true
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Docker setup
         if: ${{ github.event_name != 'pull_request_target' && github.event_name != 'pull_request' }}
-        continue-on-error: true
         uses: docker/setup-buildx-action@v3
 
       - name: Docker build and push tagged versions
         if: ${{ github.event_name == 'workflow_dispatch' }}
-        continue-on-error: true
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: panaceya/mestastic:${{ steps.version.outputs.version }}
+          tags: panaceya/meshtastic:${{ steps.version.outputs.version }}
 
       - name: Docker build and push
         if: ${{ github.ref == 'refs/heads/master' && github.event_name != 'pull_request_target' && github.event_name != 'pull_request' }}
-        continue-on-error: true
         uses: docker/build-push-action@v6
         with:
           context: .
