--- a/platformio.ini
+++ b/platformio.ini
@@ -123,7 +123,8 @@ lib_deps =
 
 [radiolib_base]
 lib_deps =
-	https://github.com/jgromes/RadioLib.git#b2b4c9e0f73bd9d5a435b291ee27574ee9c2f69f
+	; jgromes/RadioLib@7.1.0
+	https://github.com/jgromes/RadioLib.git#92b687821ff4e6c358d866f84566f66672ab02b8
 
 ; Common libs for environmental measurements in telemetry module
 ; (not included in native / portduino)
