--- a/.github/workflows/test_native.yml
+++ b/.github/workflows/test_native.yml
@@ -14,8 +14,7 @@ jobs:
     name: Native Simulator Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
@@ -44,29 +43,29 @@ jobs:
           echo "Simulator started, launching python test..."
           python3 -c 'from meshtastic.test import testSimulator; testSimulator()'
           wait
-          lcov ${{ env.LCOV_CAPTURE_FLAGS }} --test-name integration --output-file coverage_integration.info
+
+      - name: Capture coverage information
+        if: always() # run this step even if previous step failed
+        run: lcov ${{ env.LCOV_CAPTURE_FLAGS }} --test-name integration --output-file coverage_integration.info
 
       - name: Get release version string
+        if: always() # run this step even if previous step failed
         run: echo "version=$(./bin/buildinfo.py long)" >> $GITHUB_OUTPUT
         id: version
 
-      - uses: actions/upload-artifact@v4
+      - name: Save coverage information
+        uses: actions/upload-artifact@v4
+        if: always() # run this step even if previous step failed
         with:
           name: lcov-coverage-info-native-simulator-test-${{ steps.version.outputs.version }}.zip
           overwrite: true
-          path: |
-            ./coverage_*.info
+          path: ./coverage_*.info
 
   platformio-tests:
     name: Native PlatformIO Tests
     runs-on: ubuntu-latest
-    permissions: # Needed for dorny/test-reporter.
-      contents: read
-      actions: read
-      checks: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
@@ -74,48 +73,67 @@ jobs:
         id: base
         uses: ./.github/actions/setup-native
 
+      - name: Get release version string
+        run: echo "version=$(./bin/buildinfo.py long)" >> $GITHUB_OUTPUT
+        id: version
+
       - name: PlatformIO Tests
         run: platformio test -e coverage --junit-output-path testreport.xml
 
+      - name: Save test results
+        if: always() # run this step even if previous step failed
+        uses: actions/upload-artifact@v4
+        with:
+          name: platformio-test-report-${{ steps.version.outputs.version }}.zip
+          overwrite: true
+          path: ./testreport.xml
+
+      - name: Capture coverage information
+        if: always() # run this step even if previous step failed
+        run: |
+          sudo apt-get install -y lcov
+          lcov ${{ env.LCOV_CAPTURE_FLAGS }} --test-name tests --output-file coverage_tests.info
+
+      - name: Save coverage information
+        uses: actions/upload-artifact@v4
+        if: always() # run this step even if previous step failed
+        with:
+          name: lcov-coverage-info-native-platformio-tests-${{ steps.version.outputs.version }}.zip
+          overwrite: true
+          path: ./coverage_*.info
+
+  generate-reports:
+    name: Generate Reports
+    runs-on: ubuntu-latest
+    permissions: # Needed for dorny/test-reporter.
+      contents: read
+      actions: read
+      checks: write
+    needs:
+      - simulator-tests
+      - platformio-tests
+    if: always()
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Get release version string
+        run: echo "version=$(./bin/buildinfo.py long)" >> $GITHUB_OUTPUT
+        id: version
+
+      - name: Download test artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: platformio-test-report-${{ steps.version.outputs.version }}.zip
+          merge-multiple: true
+
       - name: Test Report
         uses: dorny/test-reporter@v1.9.1
-        if: success() || failure() # run this step even if previous step failed
         with:
           name: PlatformIO Tests
           path: testreport.xml
           reporter: java-junit
 
-      - name: Capture coverage information
-        run: |
-          sudo apt-get install -y lcov
-          lcov ${{ env.LCOV_CAPTURE_FLAGS }} --test-name tests --output-file coverage_tests.info
-
-      - name: Get release version string
-        run: echo "version=$(./bin/buildinfo.py long)" >> $GITHUB_OUTPUT
-        id: version
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: lcov-coverage-info-native-platformio-tests-${{ steps.version.outputs.version }}.zip
-          overwrite: true
-          path: |
-            ./coverage_*.info
-
-  coverage-report:
-    name: Generate Code Coverage Report
-    needs:
-      - simulator-tests
-      - platformio-tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Get release version string
-        run: echo "version=$(./bin/buildinfo.py long)" >> $GITHUB_OUTPUT
-        id: version
-
-      - name: Download artifacts
+      - name: Download coverage artifacts
         uses: actions/download-artifact@v4
         with:
           pattern: lcov-coverage-info-native-*-${{ steps.version.outputs.version }}.zip
