--- a/.github/workflows/release_channels.yml
+++ b/.github/workflows/release_channels.yml
@@ -27,3 +27,10 @@ jobs:
       series: |-
         ${{ contains(github.event.release.name, 'Beta') && 'beta' || contains(github.event.release.name, 'Alpha') && 'alpha' }}
     secrets: inherit
+
+  # hook-copr:
+  #   uses: ./.github/workflows/hook_copr.yml
+  #   with:
+  #     copr_project: |-
+  #       ${{ contains(github.event.release.name, 'Beta') && 'beta' || contains(github.event.release.name, 'Alpha') && 'alpha' }}
+  #   secrets: inherit
