--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,8 @@ default_envs = tbeam
 extra_configs =
 	arch/*/*.ini
 	variants/*/platformio.ini
+	src/graphics/niche/InkHUD/PlatformioConfig.ini
+
 description = Meshtastic
 
 [env]
@@ -77,7 +79,7 @@ lib_deps =
 	${env.lib_deps}
 	end2endzone/NonBlockingRTTTL@1.3.0
 build_flags = ${env.build_flags} -Os
-build_src_filter = ${env.build_src_filter} -<platform/portduino/>
+build_src_filter = ${env.build_src_filter} -<platform/portduino/> -<graphics/niche/>
 
 ; Common libs for communicating over TCP/IP networks such as MQTT
 [networking_base]
