--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -8,7 +8,7 @@ board = seeed-sensecap-indicator
 board_check = true
 upload_protocol = esptool
 
-build_flags = ${esp32_base.build_flags}
+build_flags = ${esp32s3_base.build_flags}
   -Ivariants/seeed-sensecap-indicator
   -DSENSECAP_INDICATOR
   -DCONFIG_ARDUHAL_LOG_COLORS
@@ -26,7 +26,7 @@ lib_deps = ${esp32s3_base.lib_deps}
   https://github.com/mverch67/LovyanGFX#develop
   earlephilhower/ESP8266Audio@^1.9.9
   earlephilhower/ESP8266SAM@^1.0.1
-
+  locoduino/RingBuffer@^1.0.5
 
 [env:seeed-sensecap-indicator-tft]
 extends = env:seeed-sensecap-indicator
