--- a/variants/hackerboxes_esp32_io/platformio.ini
+++ b/variants/hackerboxes_esp32_io/platformio.ini
@@ -1,6 +1,7 @@
 [env:hackerboxes-esp32-io]
 extends = esp32_base
 board = esp32dev
+board_level = extra
 build_flags = 
   ${esp32_base.build_flags}
   -D PRIVATE_HW
