--- a/variants/hackerboxes_esp32c3_oled/platformio.ini
+++ b/variants/hackerboxes_esp32c3_oled/platformio.ini
@@ -1,6 +1,7 @@
 [env:hackerboxes-esp32c3-oled]
 extends = esp32c3_base
 board = esp32-c3-devkitm-1
+board_level = extra
 build_flags = 
   ${esp32_base.build_flags}
   -D PRIVATE_HW
