--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -66,7 +66,7 @@ build_flags =
   -D VIEW_320x240
 ;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
-;  -D MAP_FULL_REDRAW
+  -D MAP_FULL_REDRAW
 
 lib_deps =
   ${env:t-deck.lib_deps}
