--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -25,7 +25,9 @@ build_flags = ${esp32_base.build_flags}
   -DUSE_ARDUINO_HAL_GPIO
 
 lib_deps = ${esp32s3_base.lib_deps}
-  https://github.com/mverch67/LovyanGFX#4c76238c1344162a234ae917b27651af146d6fb2
+  ; https://github.com/mverch67/LovyanGFX#4c76238c1344162a234ae917b27651af146d6fb2
+  ; TODO Check 1.2.0 has the fix
+  https://github.com/lovyan03/LovyanGFX@1.2.0
   earlephilhower/ESP8266Audio@^1.9.9
   earlephilhower/ESP8266SAM@^1.0.1
 
